<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNeutralLight">

    <TextView
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_setup" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:padding="8dp"
            android:text="@string/user_name_label"/>

        <TextView
            android:id="@+id/userSetupNameErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorErrorRed"
            android:textSize="18sp"
            android:padding="8dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/userSetupNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:padding="8dp"
        android:hint="@string/name_hint"
        android:autofillHints=""
        android:maxLength="25"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:gravity="end">

        <Button
            android:id="@+id/userSetupCancelButton"
            style="@style/DarkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/userSetupSubmitButton"
            style="@style/DarkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>